--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@seznam/compose-react-refs": "^1.0.6",
     "bulma": "^0.9.4",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
@@ -25,6 +27,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "sass": "^1.52.3",
+    "ts-toolbelt": "^9.6.0",
     "typescript": "4.7.3"
   }
 }
