--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/styled-components": "^5.1.25",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "prettier": "^2.8.8",
     "sass": "^1.52.3",
     "ts-toolbelt": "^9.6.0",
     "typescript": "4.7.3"
