--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "bulma": "^0.9.4",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "^13.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
     "@types/react-dom": "18.0.5",
     "@types/styled-components": "^5.1.25",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.4.4",
     "prettier": "^2.8.8",
     "sass": "^1.52.3",
     "ts-toolbelt": "^9.6.0",
